# rag_backend

./: .env.example  .gitignore  README.md  pyproject.toml  setup_db.py
app/: main.py
app/api/: chat.py  ingestion.py
app/api/core/: config.py  logger.py
app/db/: init_db.py  session.py
app/db/models/: booking.py  document.py
app/providers/: base.py  gemini_provider.py  groq_provider.py  openai_provider.py  provider_factory.py
app/repositories/: booking_repository.py  document_repository.py
app/schemas/: ingestion.py
app/services/booking/: booking_extraction.py  booking_service.py  booking_validator.py
app/services/chat/: chat_service.py
app/services/ingestion/: chunker.py  embedder.py  ingestion_service.py  parser.py  vector_store.py
app/services/memory/: booking_memory.py  chat_memory.py  redis_client.py
app/services/rag/: llm.py  prompt_builder.py  rag_service.py  retriever.py
app/services/router/: intent_router.py  prompts.py  tools.py
