[project]
name = "rag-backend"
version = "0.1.0"
description = "Document Ingestion API with RAG capabilities"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "qdrant-client>=1.17.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pypdf>=3.0.0",
    "python-multipart>=0.0.26",
    "langchain-huggingface>=1.2.2",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.16",
    "redis>=7.4.0",
    "langchain-groq>=1.1.2",
    "langchain-core>=1.3.0",
]
